Bug: Align filter bar with class cards fix

--- a/styles/pages/_Results.scss
+++ b/styles/pages/_Results.scss
@@ -111,7 +111,7 @@ $SIDEBAR_WIDTH: 268px;
   }
 
   background-color: Colors.$Off_White;
-  padding: 25px 15px 25px 15px;
+  padding: 16px 15px 25px 15px;
 }
 
 .Results_SidebarSpacer {
